# Agentic-AI-Assistant

./: .gitignore  README.md  docker-compose.yml  start.ps1
backend/: .env.example  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/agent/: orchestrator.py
backend/app/api/: auth.py  chat.py  integrations.py  jobs.py
backend/app/core/: logging.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_initial_schema.py  002_add_is_pinned_to_conversations.py
backend/app/jobs/: worker.py
backend/app/llm/: adapter.py  openai_provider.py  prompt_builder.py
backend/app/models/: __init__.py  audit_event.py  connected_account.py  conversation.py  message.py  tool_execution.py  user.py  workspace.py
backend/app/services/: audit_service.py  auth_service.py  chat_service.py  google_token_service.py  ms_token_service.py  token_vault.py
backend/app/tools/: base.py  registry.py
backend/app/tools/definitions/: calendar_tools.py  gmail_tools.py  jira_tools.py  notion_tools.py  outlook_tools.py  slack_tools.py  teams_tools.py
backend/tests/: conftest.py
backend/tests/integration/: test_app.py
backend/tests/unit/: test_auth_refresh.py  test_orchestrator.py  test_security.py  test_tool_registry.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: chat.module.css  page.tsx
frontend/src/lib/: api.ts
frontend/src/store/: chatStore.ts
frontend/src/types/: index.ts
(+15 files in other folders)
