[project]
name = "backend"
version = "0.1.0"
description = "Agentic AI Enterprise Assistant — FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "atlassian-python-api>=4.0.7",
    "cryptography>=47.0.0",
    "fastapi>=0.136.1",
    "google-api-python-client>=2.195.0",
    "google-auth>=2.50.0",
    "google-auth-oauthlib>=1.3.1",
    "httpx>=0.28.1",
    "msal>=1.36.0",
    "notion-client>=3.0.0",
    "openai>=2.33.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.27",
    "redis>=5.3.1",
    "slack-sdk>=3.41.0",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.46.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # fastapi Depends() in defaults is intentional
